@@ -224,7 +224,7 @@ class LuaOpenGL {
 		static int MultiTexEnv(lua_State* L) { return 0; }
 		static int MultiTexGen(lua_State* L) { return 0; }
 
-		static int Shape(lua_State* L);
+		static int Shape(lua_State* L) { return 0; }
 		static int BeginEnd(lua_State* L);
 		static int Vertex(lua_State* L);
 		static int Normal(lua_State* L);
